--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,129 @@
-test2
+<!DOCTYPE html>
+<html>
+
+<head>
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.prs {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.prs td, .prs th {
+  border: 1px solid #ddd;
+  padding: 4px;
+}
+
+.prs tr:nth-child(even){background-color: #f2f2f2;}
+
+.prs tr:hover {background-color: #ddd;}
+
+.prs th {
+  padding-top: 4px;
+  padding-bottom: 4px;
+  text-align: left;
+  background-color: #333f67;
+  color: white;
+}
+</style>
+
+<script type="text/javascript">
+	const urlParams = new URLSearchParams(window.location.search);
+
+	function prLink(pr) {
+		return "<a href='https://github.com/zephyrproject-rtos/zephyr/pull/" + pr + "'>" + pr + "</a>"
+	}
+
+	function appendData(username, values, table) {
+		const tbody = document.getElementById(table)
+		for (const [_, pr] of Object.entries(values)) {
+			const row = tbody.insertRow(-1)
+			const cell = row.insertCell(0)
+			cell.innerHTML = prLink(pr)
+		}
+	}
+
+	function appendUser(username, values) {
+		appendData(username, values.blocking, "blocking")
+		appendData(username, values.assignee, "assignee")
+		appendData(username, values.reviewer, "reviewer")
+		appendData(username, values.approved, "approved")
+		appendData(username, values.commented, "commented")
+		appendData(username, values.author, "author")
+	}
+
+	function appendUsers(data) {
+		for (const [username, values] of Object.entries(data)) {
+			if (urlParams.get("username") == username) {
+				appendUser(username, values)
+			}
+		}
+	}
+
+	function loadUsers() {
+		fetch("users.json").
+			then(response => response.json()).
+			then(response => appendUsers(response))
+	}
+
+	window.addEventListener("load", (event) => {
+		loadUsers()
+	})
+</script>
+</head>
+
+<body>
+
+<h1>Authored</h1>
+
+<table class="prs" id="author">
+  <tr>
+    <th>#</th><th>Title</th><th>Author</th><th>Assignee</th><th>Reviewers</th><th>Branch</th><th>Waiting</th><th>A</th><th>R</th><th>V</th>
+  </tr>
+</table>
+
+<h1>Blocked</h1>
+
+<table class="prs" id="blocking">
+  <tr>
+    <th>#</th><th>Title</th><th>Author</th><th>Assignee</th><th>Reviewers</th><th>Branch</th><th>Waiting</th><th>A</th><th>R</th><th>V</th>
+  </tr>
+</table>
+
+<h1>Assigned</h1>
+
+<table class="prs" id="assignee">
+  <tr>
+    <th>#</th><th>Title</th><th>Author</th><th>Assignee</th><th>Reviewers</th><th>Branch</th><th>Waiting</th><th>A</th><th>R</th><th>V</th>
+  </tr>
+</table>
+
+<h1>Reviews</h1>
+
+<table class="prs" id="reviewer">
+  <tr>
+    <th>#</th><th>Title</th><th>Author</th><th>Assignee</th><th>Reviewers</th><th>Branch</th><th>Waiting</th><th>A</th><th>R</th><th>V</th>
+  </tr>
+</table>
+
+<h1>Approved</h1>
+
+<table class="prs" id="approved">
+  <tr>
+    <th>#</th><th>Title</th><th>Author</th><th>Assignee</th><th>Reviewers</th><th>Branch</th><th>Waiting</th><th>A</th><th>R</th><th>V</th>
+  </tr>
+</table>
+
+<h1>Commented</h1>
+
+<table class="prs" id="commented">
+  <tr>
+    <th>#</th><th>Title</th><th>Author</th><th>Assignee</th><th>Reviewers</th><th>Branch</th><th>Waiting</th><th>A</th><th>R</th><th>V</th>
+  </tr>
+</table>
+
+</body>
+</html>
