--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@ a.blocked {
 <table class="prs" id="author">
   <tr>
     <th>#</th><th>Title</th><th>Author</th><th>Assignee</th><th>Reviewers</th>
-    <th>Branch</th><th>Waiting</th>
+    <th>Branch</th><th>Updated</th>
     <th>&check;</th><th>+</th><th>&#10005;</th>
   </tr>
 </table>
@@ -195,7 +195,7 @@ a.blocked {
 <table class="prs" id="blocking">
   <tr>
     <th>#</th><th>Title</th><th>Author</th><th>Assignee</th><th>Reviewers</th>
-    <th>Branch</th><th>Waiting</th>
+    <th>Branch</th><th>Updated</th>
     <th>&check;</th><th>+</th><th>&#10005;</th>
   </tr>
 </table>
@@ -205,7 +205,7 @@ a.blocked {
 <table class="prs" id="assignee">
   <tr>
     <th>#</th><th>Title</th><th>Author</th><th>Assignee</th><th>Reviewers</th>
-    <th>Branch</th><th>Waiting</th>
+    <th>Branch</th><th>Updated</th>
     <th>&check;</th><th>+</th><th>&#10005;</th>
   </tr>
 </table>
@@ -215,7 +215,7 @@ a.blocked {
 <table class="prs" id="reviewer">
   <tr>
     <th>#</th><th>Title</th><th>Author</th><th>Assignee</th><th>Reviewers</th>
-    <th>Branch</th><th>Waiting</th>
+    <th>Branch</th><th>Updated</th>
     <th>&check;</th><th>+</th><th>&#10005;</th>
   </tr>
 </table>
@@ -225,7 +225,7 @@ a.blocked {
 <table class="prs" id="approved">
   <tr>
     <th>#</th><th>Title</th><th>Author</th><th>Assignee</th><th>Reviewers</th>
-    <th>Branch</th><th>Waiting</th>
+    <th>Branch</th><th>Updated</th>
     <th>&check;</th><th>+</th><th>&#10005;</th>
   </tr>
 </table>
@@ -235,7 +235,7 @@ a.blocked {
 <table class="prs" id="commented">
   <tr>
     <th>#</th><th>Title</th><th>Author</th><th>Assignee</th><th>Reviewers</th>
-    <th>Branch</th><th>Waiting</th>
+    <th>Branch</th><th>Updated</th>
     <th>&check;</th><th>+</th><th>&#10005;</th>
   </tr>
 </table>
