code formatting CSS stylesheet
minor code reformatting

Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,13 @@ a.blocked {
 	padding: 4px;
 }
 
-.prs tr:nth-child(even){background-color: #f2f2f2;}
+.prs tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
 
-.prs tr:hover {background-color: #ddd;}
+.prs tr:hover {
+	background-color: #ddd;
+}
 
 .prs th {
 	padding-top: 4px;
