css: fix z-index for table captions
A recent update to the captions prevented the filter field from being
clickable. Fix the z-index accordingly so that captions are in the
background.

Signed-off-by: Benjamin Cabé <benjamin@zephyrproject.org>

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,8 @@ a.blocked {
 }
 
 .prs caption {
+	position: relative;
+	z-index: -1;
 	font-size: 1.6rem;
 	font-weight: bold;
 	text-align: left;
